--- a/packages/layout/src/assets/css/layouts/sidebar-only-layout.css
+++ b/packages/layout/src/assets/css/layouts/sidebar-only-layout.css
@@ -17,7 +17,6 @@
 }
 
 .dz-sidebar-only-layout > .dz-sidebar > .dz-user-menu {
-  display: flex;
   padding: 0.5rem 0;
 }
 
